# portfolio-beta

./: .env  .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  bun.lockb  jest.config.js  manifest.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  robot.ts  sitemap.ts  tailwind.config.js  tsconfig.json  vercel.json
api/: hello.rs
portfolio-cms/: package.json  sanity.json
prisma/: schema.prisma
prisma/migrations/20240611235031_novin_personal_initial/: migration.sql
prisma/migrations/20240612001314_novin_personal_comments/: migration.sql
src/: auth.ts  mdx-components.tsx
src/actions/: deleteComment.tsx
src/app/: Analytics.jsx  layout.jsx  layout.tsx  loading.jsx  page.jsx  page.tsx  sitemap.ts  template.tsx
src/components/: AdBanner.tsx  AdjacentPosts.tsx  Adsense.tsx  Banner.jsx  BlogCard.jsx  BlogFeed.jsx  BlogHero.jsx  Breadcrumbs.tsx  Categories.tsx  CommentInput.tsx  ContactForm.jsx  ContactHero.jsx  CopyButton.tsx  CustomCursor.tsx  DeleteCommentButton.tsx  DidYouFindThisArticleHelpful.tsx  Footer.tsx  Loading.tsx  LoadingBar.tsx  MDXPage.tsx  NavBar.jsx  NavHeader.tsx  NavLink.jsx  ProgressBar.tsx  ProjectHero.jsx  RelatedPosts.tsx  ScrollToTop.tsx  ScrollVideo.tsx  SignIn.tsx  SignOut.tsx  SmoothWrapper.tsx  SubscribeForm.tsx  Tags.tsx  ThemeButton.jsx  index.ts
src/constants/: blog.ts  index.ts  typography.ts
src/context/: context.js
src/helpers/: device.ts  gtm.ts  index.ts
src/hooks/: useMarkdownWithLatex.tsx
src/lib/: blog.ts  index.ts  prisma.js
src/styles/: global.css
src/types/: index.ts
(+14 files in other folders)
