[package]
name = "portfolio-beta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["macros"] }
chrono = "0.4.38"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.4.1"
urlencoding = "2.1.3"
vercel_runtime = { version = "1.1.1" }

[[bin]]
name = "hello"
path = "src/api/hello.rs"
